--- a/team-management/base/garoon/elastic-serviceaccount.yaml
+++ b/team-management/base/garoon/elastic-serviceaccount.yaml
@@ -3,16 +3,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elastic
-  namespace: app-ept-monitoring
+  namespace: app-garoon-monitoring
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elastic
-  namespace: app-ept-plantuml
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: elastic
-  namespace: app-ept-wiki
+  namespace: app-garoon-static
