--- a/argocd-config/overlays/osaka0/kustomization.yaml
+++ b/argocd-config/overlays/osaka0/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
-- maneki-apps.yaml
-- tenant-apps.yaml
+- tenants
 patchesStrategicMerge:
 - argocd-ingress.yaml
 - argocd.yaml
