add new deviceClass
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/rook/base/ceph-hdd/cephobjectstore.yaml
+++ b/rook/base/ceph-hdd/cephobjectstore.yaml
@@ -8,10 +8,12 @@ metadata:
     argocd.argoproj.io/sync-wave: "1"
 spec:
   metadataPool:
+    deviceClass: "ssd"
     failureDomain: zone
     replicated:
       size: 3
   dataPool:
+    deviceClass: "hdd"
     failureDomain: zone
     replicated:
       size: 3
