--- a/monitoring/base/grafana-operator/dashboards/all-nodes.yaml
+++ b/monitoring/base/grafana-operator/dashboards/all-nodes.yaml
@@ -719,7 +719,7 @@ spec:
                 "steppedLine": false,
                 "targets": [
                     {
-                        "expr": "changes(node_boot_time_seconds{}[15m:]) > 0",
+                        "expr": "changes(node_boot_time_seconds[15m]) > 0",
                         "interval": "",
                         "legendFormat": "",
                         "refId": "A"
