Add a command to maintain tenant repositories
Signed-off-by: Daichi Sakaue <daichi-sakaue@cybozu.co.jp>

--- a/team-management/template/settings.json
+++ b/team-management/template/settings.json
@@ -88,5 +88,8 @@
       "app-octodns",
       "maneki"
     ]
+  },
+  "repos": {
+    "https://github.com/garoon-private/static-deployment.git": "garoon"
   }
 }
