fix reboot count query
Signed-off-by: binoue <banji-inoue@cybozu.co.jp>

--- a/monitoring/base/grafana-operator/dashboards/all-nodes.yaml
+++ b/monitoring/base/grafana-operator/dashboards/all-nodes.yaml
@@ -719,7 +719,7 @@ spec:
                 "steppedLine": false,
                 "targets": [
                     {
-                        "expr": "changes(node_boot_time_seconds[15m]) > 0",
+                        "expr": "sum_over_time((delta(node_boot_time_seconds) > bool 5)[15m:])",
                         "interval": "",
                         "legendFormat": "",
                         "refId": "A"
