topolvm: add topolvm-ext4 StorageClass

--- a/topolvm/base/kustomization.yaml
+++ b/topolvm/base/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
 - upstream/overlays/daemonset-scheduler/scheduler.yaml
 - pdb.yaml
 - priorityclass.yaml
+- ext4.yaml
 
 patchesStrategicMerge:
 - crd.yaml
