save promtail's positions file to /var/log
Signed-off-by: UMEZAWA Takeshi <takeshi-umezawa@cybozu.co.jp>

--- a/logging/base/promtail/patch.yaml
+++ b/logging/base/promtail/patch.yaml
@@ -29,6 +29,9 @@ spec:
         - hostPath:
             path: /run/log/journal
           name: journal
+        - hostPath:
+            path: /var/log/promtail
+          name: run
       tolerations:
         - key: cke.cybozu.com/role
           operator: Equal
