--- a/namespaces/base/domestic-egress.yaml
+++ b/namespaces/base/domestic-egress.yaml
@@ -6,3 +6,4 @@ metadata:
     coil.cybozu.com/pool: domestic-egress
   labels:
     pod-security.cybozu.com/policy: privileged
+    hnc.x-k8s.io/excluded-namespace: true
