--- a/namespaces/base/hnc.yaml
+++ b/namespaces/base/hnc.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: external-dns
+  name: hnc-system
   labels:
-    cert-manager.io/disable-validation: "true"
     hnc.x-k8s.io/excluded-namespace: true
