--- a/namespaces/base/metallb.yaml
+++ b/namespaces/base/metallb.yaml
@@ -4,3 +4,4 @@ metadata:
   name: metallb-system
   labels:
     pod-security.cybozu.com/policy: privileged
+    hnc.x-k8s.io/excluded-namespace: true
