--- a/namespaces/base/cert-manager.yaml
+++ b/namespaces/base/cert-manager.yaml
@@ -7,4 +7,4 @@ metadata:
     topolvm.cybozu.com/webhook: ignore
     admission.cybozu.com/pod: ignore
     pod-security.cybozu.com/policy: privileged
-    hnc.x-k8s.io/excluded-namespace: true
+    hnc.x-k8s.io/excluded-namespace: "true"
