--- a/namespaces/base/prometheus-adapter.yaml
+++ b/namespaces/base/prometheus-adapter.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: prometheus-adapter
   labels:
-    hnc.x-k8s.io/excluded-namespace: true
+    hnc.x-k8s.io/excluded-namespace: "true"
