--- a/namespaces/base/pvc-autoresizer.yaml
+++ b/namespaces/base/pvc-autoresizer.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: pvc-autoresizer
   labels:
-    hnc.x-k8s.io/excluded-namespace: true
+    hnc.x-k8s.io/excluded-namespace: "true"
