--- a/namespaces/base/rook-ceph.yaml
+++ b/namespaces/base/rook-ceph.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ceph-hdd
   labels:
     pod-security.cybozu.com/policy: privileged
-    hnc.x-k8s.io/excluded-namespace: true
+    hnc.x-k8s.io/excluded-namespace: "true"
 ---
 apiVersion: v1
 kind: Namespace
@@ -12,4 +12,4 @@ metadata:
   name: ceph-ssd
   labels:
     pod-security.cybozu.com/policy: privileged
-    hnc.x-k8s.io/excluded-namespace: true
+    hnc.x-k8s.io/excluded-namespace: "true"
