--- a/namespaces/base/teleport.yaml
+++ b/namespaces/base/teleport.yaml
@@ -5,4 +5,4 @@ metadata:
   annotations:
     admission.cybozu.com/min-policy-order: "500"
   labels:
-    hnc.x-k8s.io/excluded-namespace: true
+    hnc.x-k8s.io/excluded-namespace: "true"
