add hnc.yaml to kustomization.yaml
Signed-off-by: akazs <5749172+akazs@users.noreply.github.com>

--- a/argocd-config/base/kustomization.yaml
+++ b/argocd-config/base/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - customer-egress.yaml
 - elastic.yaml
 - external-dns.yaml
+- hnc.yaml
 - ingress.yaml
 - kube-metrics-adapter.yaml
 - local-pv-provisioner.yaml
