--- a/argocd-config/overlays/stage0/kustomization.yaml
+++ b/argocd-config/overlays/stage0/kustomization.yaml
@@ -13,6 +13,7 @@ patchesStrategicMerge:
 - customer-egress.yaml
 - elastic.yaml
 - external-dns.yaml
+- hnc.yaml
 - ingress.yaml
 - kube-metrics-adapter.yaml
 - local-pv-provisioner.yaml
