--- a/namespaces/base/kustomization.yaml
+++ b/namespaces/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - domestic-egress.yaml
 - elastic.yaml
 - external-dns.yaml
+- hnc.yaml
 - ingress.yaml
 - internet-egress.yaml
 - kube-system.yaml
