add ignoreDifferences to hnc
Signed-off-by: akazs <5749172+akazs@users.noreply.github.com>

--- a/argocd-config/base/hnc.yaml
+++ b/argocd-config/base/hnc.yaml
@@ -21,3 +21,19 @@ spec:
     automated:
       prune: true
       selfHeal: true
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: hncconfigurations.hnc.x-k8s.io
+      jsonPointers:
+        - /spec/preserveUnknownFields
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: hierarchyconfigurations.hnc.x-k8s.io
+      jsonPointers:
+        - /spec/preserveUnknownFields
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: subnamespaceanchors.hnc.x-k8s.io
+      jsonPointers:
+        - /spec/preserveUnknownFields
