add maneki-dev namespace
Signed-off-by: binoue <banji-inoue@cybozu.co.jp>

--- a/team-management/base/maneki/elastic-serviceaccount.yaml
+++ b/team-management/base/maneki/elastic-serviceaccount.yaml
@@ -82,3 +82,9 @@ kind: ServiceAccount
 metadata:
   name: elastic
   namespace: maneki
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: elastic
+  namespace: maneki-dev
