--- a/team-management/template/settings.json
+++ b/team-management/template/settings.json
@@ -86,7 +86,8 @@
       "app-monitoring-elasticstack",
       "app-oauth-redirector",
       "app-octodns",
-      "maneki"
+      "maneki",
+      "maneki-dev"
     ]
   }
 }
