--- a/hnc/base/clusterroles/cluster_role_aggregate_hnc_view.yaml
+++ b/hnc/base/clusterroles/cluster_role_aggregate_hnc_view.yaml
@@ -1,7 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: hnc-admin-role
+  labels:
+    rbac.authorization.k8s.io/aggregate-to-view: "true"
+  name: hnc-view-role
 rules:
 - apiGroups:
   - hnc.x-k8s.io
@@ -10,4 +12,6 @@ rules:
   - hncconfigurations
   - subnamespaceanchors
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
