--- a/hnc/base/kustomization.yaml
+++ b/hnc/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - upstream/hnc-manager.yaml
+  - clusterroles/cluster_role_aggregate_hnc_view.yaml
 images:
   - name: gcr.io/k8s-staging-multitenancy/hnc-manager
     newName: quay.io/cybozu/hnc
@@ -10,4 +11,4 @@ patchesStrategicMerge:
   - crd.yaml
   - hnc-system.yaml
   - deployment.yaml
-  - clusterrole.yaml
+  - clusterroles/cluster_role_aggregate_hnc_admin_edit.yaml
