remove hnc from prod environment
Signed-off-by: binoue <banji-inoue@cybozu.co.jp>

--- a/argocd-config/overlays/gcp/hnc.yaml
+++ b/argocd-config/overlays/gcp/hnc.yaml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/cybozu-go/neco-apps.git
-    targetRevision: stage
+    targetRevision: release
     path: hnc/base
   destination:
     server: https://kubernetes.default.svc
