--- a/argocd-config/overlays/gcp/kustomization.yaml
+++ b/argocd-config/overlays/gcp/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
+- hnc.yaml
 patchesStrategicMerge:
 - argocd-ingress.yaml
 - bmc-reverse-proxy.yaml
