--- a/team-management/base/maneki/app-monitoring.yaml
+++ b/team-management/base/maneki/app-monitoring.yaml
@@ -2,6 +2,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  labels:
+    hnc.x-k8s.io/excluded-namespace: "true"
   name: app-monitoring
 ---
 apiVersion: rbac.authorization.k8s.io/v1
