--- a/team-management/base/maneki/maneki.yaml
+++ b/team-management/base/maneki/maneki.yaml
@@ -4,6 +4,7 @@ kind: Namespace
 metadata:
   labels:
     app.kubernetes.io/name: maneki
+    hnc.x-k8s.io/excluded-namespace: "true"
   name: maneki
 ---
 apiVersion: rbac.authorization.k8s.io/v1
