remove hncconfigurations permmisions from admin and view
Signed-off-by: binoue <banji-inoue@cybozu.co.jp>

--- a/hnc/base/clusterroles/cluster_role_aggregate_hnc_admin_edit.yaml
+++ b/hnc/base/clusterroles/cluster_role_aggregate_hnc_admin_edit.yaml
@@ -10,7 +10,12 @@ rules:
   - hnc.x-k8s.io
   resources:
   - hierarchyconfigurations
-  - hncconfigurations
   - subnamespaceanchors
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
