--- a/argocd-config/base/kustomization.yaml
+++ b/argocd-config/base/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- argocd-config.yaml
 - argocd-ingress.yaml
 - argocd.yaml
 - bmc-reverse-proxy.yaml
